tests/snapshots/run_wpt_conformance__onnx_scatterND_1D_float16_tensors_by_negative_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "scatterND.https.any.js",
    "scatterND 1D float16 tensors by negative indices",
    "onnx",
    "PASS",
)
