tests/snapshots/run_wpt_conformance__onnx_scatterND_2D_int8_tensors_with_index_out_of_bound.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "scatterND.https.any.js",
    "scatterND 2D int8 tensors with index out of bound",
    "onnx",
    "PASS",
)
